--- a/clients/composer.json
+++ b/clients/composer.json
@@ -11,5 +11,7 @@
         "name": "A-Kija",
         "email": "arvydas.kijakauskas@gmail.com"
     }],
-    "require": {}
+    "require": {
+        "ramsey/uuid": "^4.7"
+    }
 }
